Add server and client. Add basic client gui for main game.